ros2_ws/log/build_2025-01-23_00-19-09/mypkg/stderr.log
  File "/home/koara/robosys2024-4/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/test.py", line 28
    else if value.color == 9:
         ^
SyntaxError: invalid syntax

